@@ -1,4 +1,5 @@
 0.08
+ - Rewrite EXAMPLE2 in doc to use Data::Printer.
 
 0.07 2013-09-21
  - Fix README.
